[package]
name = "win-loop"
version = "0.9.0"
description = "Windowing (using `winit`), nice input handling and frame-rate-independent game loop all wrapped up in a neat little package."
authors = ["Solar-Falcon"]
edition = "2021"
license = "Zlib"
keywords = ["windowing", "input", "game", "loop"]
repository = "https://github.com/Solar-Falcon/win-loop"
readme = "README.md"

[dependencies]
anyhow = "1"
cfg-if = "1"
log = "0.4"
rustc-hash = "1"
web-time = "0.2"

[dependencies.winit]
version = "0.30"
default-features = false

[features]
default = ["rwh_06"]
rwh_04 = ["winit/rwh_04"]
rwh_05 = ["winit/rwh_05"]
rwh_06 = ["winit/rwh_06"]
winit-default = ["winit/x11", "winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[package.metadata.docs.rs]
features = ["winit-default"]
